--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,9 +32,10 @@ dependencies:
     sdk: flutter
 
   # Firebase Core Packages
-  firebase_core: ^2.24.2       # Firebaseのコア機能
-  firebase_storage: ^11.5.5    # Firebase Storage (画像/動画アップロード)
-  firebase_database: ^10.4.5   # Firebase Realtime Database (データ管理)
+  firebase_core: ^3.0.0       # Firebaseのコア機能
+  firebase_auth: ^5.0.0       # Firebase Authentication (匿名認証用)
+  firebase_storage: ^12.0.0    # Firebase Storage (画像/動画アップロード)
+  firebase_database: ^11.0.0   # Firebase Realtime Database (データ管理)
   # cloud_firestore: ^4.13.6   # (Realtime Databaseを使用する場合、Firestoreは不要なためコメントアウト)
 
   # データモデルとユーティリティ
@@ -64,7 +65,7 @@ dependencies:
   image_gallery_saver: ^1.7.1    # 画像をフォトライブラリに保存
   permission_handler: ^11.3.1    # ギャラリー保存のための権限リクエスト
 
-  mobile_scanner: ^4.0.1  # QRコード読み取り
+  mobile_scanner: ^7.0.0  # QRコード読み取り
   share_plus: ^7.2.1           # システムシェア機能の代替
   # ... (画像データを Uint8List として扱う場合は別途処理が必要)
 
